--- a/src/index.css
+++ b/src/index.css
@@ -11637,6 +11637,28 @@ a.has-text-danger-dark:hover, a.has-text-danger-dark:focus {
 }
 
 .input-space {
-  margin-bottom: 2rem;
+  margin: 0 2rem 2rem 2rem;
+  width: 40rem;
+  height: 3rem;
+  padding: .5rem;
+  font-size: 1.5rem;
+}
+
+@media (max-width: 768px) {
+  .input-space {
+    max-width: 18rem;
+  }
+}
+
+.circle-color {
+  margin-right: 1rem;
+  color: #fff;
+  top: -1rem;
+  left: 48rem;
+  width: 1rem;
+  height: 1rem;
+  border-radius: 50%;
+  background-position: 50%;
+  background-size: cover;
 }
 /*# sourceMappingURL=bulma.css.map */
