--- a/src/index.css
+++ b/src/index.css
@@ -11641,12 +11641,18 @@ a.has-text-danger-dark:hover, a.has-text-danger-dark:focus {
   width: 40rem;
   height: 3rem;
   padding: .5rem;
-  font-size: 1.5rem;
+  font-size: 1rem;
 }
 
 @media (max-width: 768px) {
   .input-space {
     max-width: 18rem;
+  }
+  .card-text {
+    text-align: center !important;
+  }
+  .last-container {
+    justify-content: center !important;
   }
 }
 
@@ -11660,5 +11666,21 @@ a.has-text-danger-dark:hover, a.has-text-danger-dark:focus {
   border-radius: 50%;
   background-position: 50%;
   background-size: cover;
+}
+.card-text {
+  text-align: left;
+}
+
+.last-container {
+  display: flex;
+  justify-content: left;
+  align-items: center;
+}
+.center-cont {
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: top
 }
 /*# sourceMappingURL=bulma.css.map */
